# statementparser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  changelog.md  contributing.md  getting-started.md  index.md  supported-banks.md  upi-parsing.md
examples/: basic_usage.py  batch_parse.py  export_to_tally.py  upi_analysis.py
src/statementparser/: __init__.py  __version__.py  cli.py
src/statementparser/core/: __init__.py  constants.py  detector.py  engine.py  exceptions.py  models.py
src/statementparser/exporters/: __init__.py  csv_excel.py  dataframe.py  json_export.py  summary.py
src/statementparser/features/: __init__.py  balance_checker.py  categorizer.py  normalizer.py  upi_parser.py
src/statementparser/parsers/: __init__.py  axis.py  base.py  hdfc.py  icici.py  registry.py  sbi.py
src/statementparser/readers/: __init__.py  excel_reader.py  password.py  pdf_reader.py
tests/: conftest.py  test_balance_checker.py  test_categorizer.py  test_detector.py  test_engine.py  test_exporters.py  test_features.py  test_models.py  test_upi_parser.py
tests/fixtures/: README.md
tests/test_parsers/: test_axis.py  test_hdfc.py  test_icici.py  test_sbi.py
