[project]
name = "statementsparser"
version = "0.1.0"
description = "Parse Indian bank statements (SBI, HDFC, ICICI, Axis) into clean, unified pandas DataFrames"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Harsh Lalakiya", email = "harshlalakiya.me@gmail.com" },
]
keywords = [
    "bank",
    "statement",
    "parser",
    "india",
    "sbi",
    "hdfc",
    "icici",
    "axis",
    "pdf",
    "upi",
    "finance",
    "pandas",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.0",
    "pdfplumber>=0.10",
    "pymupdf>=1.23",
    "pydantic>=2.0",
    "click>=8.0",
    "openpyxl>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
bankparse = "statementparser.cli:main"

[project.urls]
Homepage = "https://github.com/iharshlalakiya/statementparser"
Documentation = "https://iharshlalakiya.github.io/statementparser"
Repository = "https://github.com/iharshlalakiya/statementparser"
Issues = "https://github.com/iharshlalakiya/statementparser/issues"
Changelog = "https://github.com/iharshlalakiya/statementparser/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statementparser"]

# ── Ruff (linting + formatting) ──────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["statementparser"]

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=statementparser --cov-report=term-missing"

# ── MyPy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
packages = ["statementparser"]
